--- a/skripte/meta.tex
+++ b/skripte/meta.tex
@@ -3,49 +3,49 @@
 %-----------------------------------
 
 % Autor
-\newcommand{\myAutor}{Max Mustermann}
+\newcommand{\myAutor}{Carlo Nölle}
 
 % Adresse
-\newcommand{\myAdresse}{Heidestra\ss e 17 \\ \> \> \> 51147 Köln}
+\newcommand{\myAdresse}{Sürther Hauptstra\ss e 47 \\ \> \> \> 50999 Köln}
 
 % Titel der Arbeit
-\newcommand{\myTitel}{LATEX-Vorlage - mit Biblatex}
+\newcommand{\myTitel}{Kubernetes - Eine Revolution bei der Bereitstellung von Softwarelösungen}
 
 % Betreuer
-\newcommand{\myBetreuer}{Prof. Dr. Peter Lustig}
+\newcommand{\myBetreuer}{Dr. Arthur Dill}
 
 % Lehrveranstaltung
-\newcommand{\myLehrveranstaltung}{Modul Nr. 1}
+\newcommand{\myLehrveranstaltung}{IT-Infrastruktur}
 
 % Matrikelnummer
-\newcommand{\myMatrikelNr}{123456}
+\newcommand{\myMatrikelNr}{492765}
 
 % Ort
-\newcommand{\myOrt}{Düsseldorf}
+\newcommand{\myOrt}{Köln}
 
 % Datum der Abgabe
 \newcommand{\myAbgabeDatum}{\today}
 
 % Semesterzahl
-\newcommand{\mySemesterZahl}{7}
+\newcommand{\mySemesterZahl}{3}
 
 % Name der Hochschule
-\newcommand{\myHochschulName}{FOM Hochschule für Oekonomie \& Management Essen}
+\newcommand{\myHochschulName}{FOM Hochschule für Oekonomie \& Management Köln}
 
 % Standort der Hochschule
-\newcommand{\myHochschulStandort}{Düsseldorf}
+\newcommand{\myHochschulStandort}{Köln}
 
 % Studiengang
 \newcommand{\myStudiengang}{Wirtschaftsinformatik}
 
 % Art der Arbeit
-\newcommand{\myThesisArt}{Bachelor Thesis}
+\newcommand{\myThesisArt}{Hausarbeit}
 
 % Zu erlangender akademische Grad
 \newcommand{\myAkademischerGrad}{Bachelor of Science (B. Sc.)}
 
 % Firma
-\newcommand{\myFirma}{Mustermann GmbH}
+\newcommand{\myFirma}{Timetoact Software & Consulting GmbH}
 
 
 \ifdefined\FOMEN
