--- a/thesis_main.tex
+++ b/thesis_main.tex
@@ -276,13 +276,13 @@ mincrossrefs = 1
 		\vspace{2cm}
 		\textbf{\myThesisArt}\\
 		\textbf{
-				\langde{zur Erlangung des Grades eines}
+				\langde{im Rahmen der Lehrveranstaltung}
 				\langen{to obtain the degree of}
 				}\\
-		\textbf{\myAkademischerGrad}\\
+		%\textbf{\myAkademischerGrad}\\
 		% Oder für Hausarbeiten:
 		%\textbf{im Rahmen der Lehrveranstaltung}\\
-		%\textbf{\myLehrveranstaltung}\\
+		\textbf{\myLehrveranstaltung}\\
 		\vspace{2cm}
 		\langde{über das Thema}
 		\langen{on the subject}\\
@@ -353,10 +353,7 @@ mincrossrefs = 1
 %-----------------------------------
 % Kapitel / Inhalte
 %-----------------------------------
-\input{kapitel/einleitung/einleitung}
-\input{kapitel/kapitel_1/kapitel_1}
-\input{kapitel/kapitel_2/kapitel_2}
-\input{kapitel/fazit/fazit}
+\input{content}
 
 %-----------------------------------
 % Anhang
