--- a/kapitel/einleitung/einleitung.tex
+++ b/kapitel/einleitung/einleitung.tex
@@ -1,41 +1,32 @@
 \section{Einleitung}
-Diese Arbeit führt das Themengebiet rund um die Softwarelösung Kubernetes, welche das Bereitstellen und Pflegen von weiterer Software vereinfacht und vereinheitlicht. 
-Es wird hierbei auf verschiedene Basistechnologien gesetzt welche das gesamte Thema Softwarebereitstellung in den letzten Jahren stark geformt haben.
+Diese Arbeit umfasst das Themengebiet rund um die Softwarelösung Kubernetes, welche das Bereitstellen und Pflegen von weiterer Software vereinfacht. 
+Es wird hierbei ein flexibler und skalierbarer Ansatz gewählt der sich von anderen Techniken abhebt.
 
 \subsection{Aktualität und Relevanz}
-Steigende Nachfrage sorgt für immer neue Herausforderungen in der Art und Weise wie die Infrastruktur auf der die Softwarelösung laufen soll auszusehen hat. Was früher noch einzelne Rechner waren, wurde durch Virtualisierung zu Virtuellen Maschinen.
-Jedoch stößt man dort auch an Probleme, wenn man noch flexibler sein will. Der nächste Schritt ist die Containerisierung, und in dessen Entwicklung befinden wir uns gerade jetzt.
+Steigende Nachfrage sorgt für immer neue Herausforderungen in der Art und Weise wie eine App (Applikation) oder Website online bleibt. Wer durch Überlastung offline geht verliert potenzielle Kunden.
 
-Da die Nachfrage auf digitale Angebote nur weiter steigen wird, ist diese Entwicklung von Nöten. Hauptaugenmerk liegt durchgehend darauf, die bestehende Hardware so effizient wie möglich zu betreiben, und eine Ressoucen zu verschwenden.
+Kubernetes ist das Trendthema Nummer 1 für Systemintegranten und Infrastrukturbetreibende und wird von vielen Marktführern eingesetzt. Dadurch und durch die Open Source Lizense unter dem das Projekt steht
+ist die Software für viele interessant.
+
+\subsection{Zielsetzung}
+Kubernetes sollte heute an keinem Softwareunternehmen vorbeigehen. Natürlich ist der Aufwand immer dem Nutzen entgegen zu setzen. Mittels dieser Arbeit wird versucht einen Vergleich zu 
+herkömmlichen Methoden zu ziehen und einen Ausblick auf die Chancen und Risiken des Einsatzes der Software zu geben.
 
 \subsection{Aufbau der Arbeit}
-Wir müssen verstehen in was für einer Situation wir uns befinden, um zu erkennen warum irgendeine Änderung überhaupt notwendig ist. Unterschiede aber auch Gemeinsamkeiten müssen beleuchtet werden, sowie die tatsächlichen Veränderungen 
-für die Menschen, die mit der Änderung arbeiten müssen.
-
-Auch von Interesse sind die einfachheit der Übernahme in den laufenden Betrieb, sowie die allgemeine "Enterprise-Readiness", wobei aufgezeigt werden soll warum diese neue Technologie der Geschäftswelt gewachsen ist.
-Natürlich werden wir uns auch der Frage stellen, wie die Zukunft dieser Lösung aussieht und ob sie auch wirklich das macht was Sie verspricht und nicht vielleicht doch ähnliche Probleme mitbringt.
+TODO
 
 \subsection{Hinweise}
 Im weiteren Verlauf dieser Hausarbeit wird aus Gründen der besseren Lesbarkeit das generische Maskulinum verwendet. Weibliche und anderweitige Geschlechteridentitäten werden dabei ausdrücklich mitgemeint, soweit es für die Aussage erforderlich ist.
 
-\begin{figure}[H]
-\caption{Verzeichnisstruktur der \LaTeX{}-Datein}\label{fig:verzeichnisStruktur}
-\includegraphics[width=0.9\textwidth]{verzeichnisStruktur}
-\\
-Quelle: Eigene Darstellung
-\end{figure}
-
-\textbf{
-  - Einleitung
-  - Worum geht es (Ist-Situation)
-  - Warum wird es benötigt (Kubernetes vs. VMs)
-  - Chancen und Risiken
-  - Änderung bestehender Prozesse
-  - Ausgewählte Aspekte (Lösung Vorstellen)
-  - Umziehen bestehender Infrastruktur
-  - Enterprise Readiness
-  - Lösung erklären (Handlungsaspekte)
-  - Neue Aufgabenverteilung für Admin und Entwickler (Devops)
-  - Skalierbarkeit
-  - Fazit 
-  }
+%  - Einleitung
+%  - Worum geht es (Ist-Situation)
+%  - Warum wird es benötigt (Kubernetes vs. VMs)
+%  - Chancen und Risiken
+%  - Änderung bestehender Prozesse
+%  - Ausgewählte Aspekte (Lösung Vorstellen)
+%  - Umziehen bestehender Infrastruktur
+%  - Enterprise Readiness
+%  - Lösung erklären (Handlungsaspekte)
+%  - Neue Aufgabenverteilung für Admin und Entwickler (Devops)
+%  - Skalierbarkeit
+%  - Fazit 
