--- a/kapitel/kapitel/hintergrund.tex
+++ b/kapitel/kapitel/hintergrund.tex
@@ -29,7 +29,8 @@ Dies kann einen Vorteil bringen was die Lastverträglichkeit angeht, da manchmal
 
 Durch Horizontale Skalierung erhält man also Ausfallsicherheit, da die Website redundant verfügbar ist, und die Last wird gleichmäßig verteilt auf alle Maschinen, wobei jederzeit weitere eingegliedert werden können.
 Ausfallsichereit wird auch Hochverfügbarkeit genannt, da selbst im Falle eines Hardwaredefekts die Website immernoch erreichbar wäre. Wahre Hochverfügbarkeit würde erreicht werden, wenn die Replikate des Servers noch
-an verschiedenen physischen Standorten stehen würden, wodurch man Faktoren höherer Gewalt wie Stromausfällen davon kommt. Infrastruktur, so wird die Hardware/Software Lösung hinter der Website/App genannt, ist ein großes
+an verschiedenen physikalischen Standorten stehen würden, wodurch man Faktoren höherer Gewalt wie Stromausfällen davon kommt. Infrastruktur, so wird die Hardware/Software Lösung hinter der Website/App genannt, ist ein großes
 Thema und es gibt viele verschiedene Ansätze die gleichen Probleme zu lösen.
 
-
+Die Planung, Ausführung sowie Instandhaltung und Pflege von Infrastruktur fällt in den Aufgabenbereich eines Systemintegraten. Zumindest ist dies die klare Trennung zwischen 
+dem Softwareentwickler, also dem Programmierer, und der anderen Hälfte, dem Bereitstellen. Im weiteren Verlauf dieser Hausarbeit werden Lösungswege vorgestellt in denen die Aufgabenverteilung etwas verschmilzt.
