--- a/content.tex
+++ b/content.tex
@@ -1,3 +1,5 @@
 \input{kapitel/einleitung/einleitung}
 \input{kapitel/kapitel/hintergrund}
+\input{kapitel/kapitel/moeglichkeiten}
+\input{kapitel/kapitel/vergleich}
 \input{kapitel/fazit/fazit}
