--- a/kapitel/einleitung/einleitung.tex
+++ b/kapitel/einleitung/einleitung.tex
@@ -5,12 +5,12 @@ Es wird hierbei ein flexibler und skalierbarer Ansatz gewählt der sich von ande
 \subsection{Aktualität und Relevanz}
 Steigende Nachfrage sorgt für immer neue Herausforderungen in der Art und Weise wie eine App (Applikation) oder Website online bleibt. Wer durch Überlastung offline geht verliert potenzielle Kunden.
 
-Kubernetes ist das Trendthema Nummer 1 für Systemintegranten und Infrastrukturbetreibende und wird von vielen Marktführern eingesetzt. Dadurch und durch die Open Source Lizense unter dem das Projekt steht
+Kubernetes ist das aktuelle Trendthema für Systemintegranten und Infrastrukturbetreibende und wird von vielen Marktführern eingesetzt. Dadurch und durch die Open Source Lizense unter dem das Projekt steht
 ist die Software für viele interessant.
 
 \subsection{Zielsetzung}
 Kubernetes sollte heute an keinem Softwareunternehmen vorbeigehen. Natürlich ist der Aufwand immer dem Nutzen entgegen zu setzen. Mittels dieser Arbeit wird versucht einen Vergleich zu 
-herkömmlichen Methoden zu ziehen und einen Ausblick auf die Chancen und Risiken des Einsatzes der Software zu geben.
+bestehenden Methoden zu ziehen und einen Ausblick auf die Chancen und Risiken des Einsatzes der Software zu geben.
 
 \subsection{Aufbau der Arbeit}
 TODO
