--- a/kapitel/kapitel/hintergrund.tex
+++ b/kapitel/kapitel/hintergrund.tex
@@ -34,3 +34,5 @@ Thema und es gibt viele verschiedene Ansätze die gleichen Probleme zu lösen.
 
 Die Planung, Ausführung sowie Instandhaltung und Pflege von Infrastruktur fällt in den Aufgabenbereich eines Systemintegraten. Zumindest ist dies die klare Trennung zwischen 
 dem Softwareentwickler, also dem Programmierer, und der anderen Hälfte, dem Bereitstellen. Im weiteren Verlauf dieser Hausarbeit werden Lösungswege vorgestellt in denen die Aufgabenverteilung etwas verschmilzt.
+
+Dieses Hintergrundwissen sorgt nun für Verständnis der folgenden Themen. 
