--- a/abkuerzungen/acronyms.tex
+++ b/abkuerzungen/acronyms.tex
@@ -1,8 +1,10 @@
 % Falls das Abkürzungsverzeichnis im Inhaltsverzeichnis angezeigt werden soll
 % dann folgende Zeile einkommentieren.
-% \addcontentsline{toc}{section}{Abkürzungsverzeichnis}
+\addcontentsline{toc}{section}{Abkürzungsverzeichnis}
 \section*{\langde{Abkürzungsverzeichnis}\langen{List of abbreviations}}
 
 \begin{acronym}
-  \acro{OC}{FOM Online Campus}
+  \acro{VM}{Virtuelle Maschine}
+  \acro{OS}{Betriebssystem}
+  \acro{App}{Applikation}
 \end{acronym}
