--- a/thesis_main.tex
+++ b/thesis_main.tex
@@ -333,13 +333,13 @@ mincrossrefs = 1
 %-----------------------------------
 % Tabellenverzeichnis
 %-----------------------------------
-\listoftables
-\newpage
+%\listoftables
+%\newpage
 %-----------------------------------
 % Abkürzungsverzeichnis
 %-----------------------------------
-\input{abkuerzungen/acronyms}
-\newpage
+%\input{abkuerzungen/acronyms}
+%\newpage
 %-----------------------------------
 % Seitennummerierung auf arabisch und ab 1 beginnend umstellen
 %-----------------------------------
@@ -358,16 +358,16 @@ mincrossrefs = 1
 %-----------------------------------
 % Anhang
 %-----------------------------------
-\newpage
-\section*{Anhang} %Überschrift "Anhang", ohne Nummerierung
-\addcontentsline{toc}{section}{\langde{Anhang}\langen{Appendix}} %Den Anhang ohne Nummer zum Inhaltsverzeichnis hinzufügen
-\begin{appendices}
-\addtocontents{toc}{\protect\setcounter{tocdepth}{0}} %
-	\renewcommand{\thesection}{\langde{Anhang}\langen{Appendix} \arabic{section}:}
-	\renewcommand\thesubsection{\langde{Anhang}\langen{Appendix} \arabic{section}.\arabic{subsection}:}
-	\input{kapitel/anhang/anhang}
-\end{appendices}
-\addtocontents{toc}{\protect\setcounter{tocdepth}{2}}
+%\newpage
+%\section*{Anhang} %Überschrift "Anhang", ohne Nummerierung
+%\addcontentsline{toc}{section}{\langde{Anhang}\langen{Appendix}} %Den Anhang ohne Nummer zum Inhaltsverzeichnis hinzufügen
+%\begin{appendices}
+%\addtocontents{toc}{\protect\setcounter{tocdepth}{0}} %
+%	\renewcommand{\thesection}{\langde{Anhang}\langen{Appendix} \arabic{section}:}
+%	\renewcommand\thesubsection{\langde{Anhang}\langen{Appendix} \arabic{section}.\arabic{subsection}:}
+%	\input{kapitel/anhang/anhang}
+%\end{appendices}
+%\addtocontents{toc}{\protect\setcounter{tocdepth}{2}}
 
 %-----------------------------------
 % Literaturverzeichnis
